--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="stylecopy.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -57,7 +55,7 @@
 
         <div class="nav_right">
           <a href="#">
-            <button class="btn btn-primary btn-sm">Request Invite</button>
+            <button>Request Invite</button>
           </a>
         </div>
       </nav>
@@ -89,15 +87,13 @@
 
 <section class="mid_section">
       <h2>
-           Why choose Easybank?
+           Why Choose Easybank?
       </h2>
           <p>
-                We leverage Open Banking to turn your bank account into your financial hub.
-          </p>
-          <p>
+                We leverage Open Banking to turn your bank account into your financial hub. <br>
                 Control your finances like never before.
-          </p> 
-
+          </p>
+         
   <div class="section_grid">
       <div>
         <img src="images/icon-online.svg" alt="Online">
@@ -147,7 +143,7 @@
       Latest Articles
     </h2>
     <div class="bottom_grid">
-        <div> 
+        <article> 
           <img src="images/image-currency.jpg" alt="currency" class="img-thumbnail">
           <h6>By Claire Robinson</h6>
           <h5>
@@ -157,8 +153,8 @@
             The world is getting smaller and we`re becoming more mobile. So why should you be 
             forced to only receive money in a single …
           </p>
-        </div>
-        <div>
+        </article>
+        <article>
           <img src="images/image-restaurant.jpg" alt="restaurant" class="img-thumbnail">
           <h6>
             By Wilson Hutton
@@ -170,8 +166,8 @@
             Our simple budgeting feature allows you to separate out your spending and set 
             realistic limits each month. That means you …
           </p>
-        </div>
-        <div>
+        </article>
+        <article>
           <img src="images/image-plane.jpg" alt="plane" class="img-thumbnail">
           <h6>
             By Wilson Hutton
@@ -183,8 +179,8 @@
             We want you to enjoy your travels. This is why we don`t charge any fees on purchases 
             while you`re abroad. We`ll even show you …
           </p>
-        </div>
-        <div>
+        </article>
+        <article>
           <img src="images/image-confetti.jpg" alt="confetti" class="img-thumbnail"> 
           <h6>
             By Claire Robinson
@@ -197,7 +193,7 @@
             It`s easy to request an invite through the site ...
           </p>
         
-        </div>             
+        </article>             
     </div>
 </section>
 
