--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="nav_right">
           <a href="#">
-            <button>Request Invite</button>
+            <button class="btn btn-primary btn-sm">Request Invite</button>
           </a>
         </div>
       </nav>
@@ -90,10 +90,12 @@
            Why Choose Easybank?
       </h2>
           <p>
-                We leverage Open Banking to turn your bank account into your financial hub. <br>
-                Control your finances like never before.
+                We leverage Open Banking to turn your bank account into your financial hub.
           </p>
-         
+          <p>
+                Control your finances like never before.
+          </p> 
+
   <div class="section_grid">
       <div>
         <img src="images/icon-online.svg" alt="Online">
@@ -143,7 +145,7 @@
       Latest Articles
     </h2>
     <div class="bottom_grid">
-        <article> 
+        <div> 
           <img src="images/image-currency.jpg" alt="currency" class="img-thumbnail">
           <h6>By Claire Robinson</h6>
           <h5>
@@ -153,8 +155,8 @@
             The world is getting smaller and we`re becoming more mobile. So why should you be 
             forced to only receive money in a single …
           </p>
-        </article>
-        <article>
+        </div>
+        <div>
           <img src="images/image-restaurant.jpg" alt="restaurant" class="img-thumbnail">
           <h6>
             By Wilson Hutton
@@ -166,8 +168,8 @@
             Our simple budgeting feature allows you to separate out your spending and set 
             realistic limits each month. That means you …
           </p>
-        </article>
-        <article>
+        </div>
+        <div>
           <img src="images/image-plane.jpg" alt="plane" class="img-thumbnail">
           <h6>
             By Wilson Hutton
@@ -179,8 +181,8 @@
             We want you to enjoy your travels. This is why we don`t charge any fees on purchases 
             while you`re abroad. We`ll even show you …
           </p>
-        </article>
-        <article>
+        </div>
+        <div>
           <img src="images/image-confetti.jpg" alt="confetti" class="img-thumbnail"> 
           <h6>
             By Claire Robinson
@@ -193,7 +195,7 @@
             It`s easy to request an invite through the site ...
           </p>
         
-        </article>             
+        </div>             
     </div>
 </section>
 
