--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 We leverage Open Banking to turn your bank account into your financial hub.
           <!-- </p>
           <p> -->
-                Control your finances like never before.
+                <br>Control your finances like never before.
           </p> 
 
   <div class="section_grid">
